--- a/index.html
+++ b/index.html
@@ -568,30 +568,30 @@
             <!-- Love Message -->
             <div class="love-message">
                 <p>
-                    "Di antara segala keindahan dunia,<br>
-                    senyummu adalah yang paling aku rindukan.<br>
-                    Di antara semua hari,<br>
-                    bersamamu adalah yang paling berharga."
+                    "Jakarta dan Kupang terpaut jarak,<br>
+                    namun hatiku selalu bersamamu.<br>
+                    Walau terpaut ribuan kilometer,<br>
+                    cintaku tak pernah berubah."
                 </p>
             </div>
 
             <!-- Names -->
             <div class="names-section">
-                <div class="name">Sayangku</div>
+                <div class="name">Antoni</div>
                 <span class="and-text">&amp;</span>
-                <div class="name">Cintaku</div>
+                <div class="name">Jeju</div>
             </div>
 
             <!-- Date Section -->
             <div class="date-section">
-                <h3>💕 Mari Berkencan 💕</h3>
+                <h3>💕 Meeting Plan 💕</h3>
                 <div class="date">
                     Tanggal
                     <span>14 Februari 2025</span>
                     Pukul
                     <span>19:00 WIB</span>
                     Tempat
-                    <span>🍽️ Restaurant Romantis</span>
+                    <span>📱 Virtual Date via Video Call</span>
                 </div>
             </div>
 
@@ -601,18 +601,18 @@
                     <path d="M6 17h3l2-4V7H5v6h3zm8 0h3l2-4V7h-6v6h3z"/>
                 </svg>
                 <p class="quote">
-                    "Mencintaimu adalah keputusan yang mudah,<br>
-                    namun membuatmu tersenyum setiap hari<br>
-                    adalah keinginanku yang terbesar."
+                    "Jarak bukanlah penghalang cinta,<br>
+                    melainkan bukti bahwa cinta kita<br>
+                    tak terbatas oleh jarak."
                 </p>
-                <p class="quote-author">— Untukmu yang selalu di hatiku 💕</p>
+                <p class="quote-author">— Antoni untuk Jeju 💕</p>
             </div>
 
             <!-- Romantic Phrases -->
             <div class="romantic-phrases">
-                <p class="phrase">Aku mencintaimu lebih dari kata-kata</p>
-                <p class="phrase">Kamu adalah impian yang menjadi nyata</p>
-                <p class="phrase">Bersamamu, setiap hari terasa seperti Valentine</p>
+                <p class="phrase">Aku mencintaimu, Jakarta hingga Kupang</p>
+                <p class="phrase">Jeju, kamu adalah rumah di manapun aku berada</p>
+                <p class="phrase">LDR kita akan berakhir dengan akhir yang bahagia</p>
             </div>
 
             <!-- Bottom Decoration -->
